--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -26,14 +26,14 @@ jobs:
       - name: Run lint
         run: npm run lint
 
-      - name: Build project
+      - name: Build project 
         run: npm run build
 
       - name: Upload build artifacts
         uses: actions/upload-artifact@v4
         with:
           name: build-files
-          path: build/
+          path: dist/
 
   deploy:
     needs: build-and-test
